examples/python-web-app/k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-app
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
